# layout-viewer

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  console.cpp  desktop.cpp  main.cpp
Scripts/: build_debug.sh  build_debug_tests.sh  build_release.sh  build_release_tests.sh
Src/App/: CMakeLists.txt
Src/App/Console/: CMakeLists.txt  main.cpp
Src/App/GUI/: CMakeLists.txt  main.cpp
Src/App/Python/: ademamix.py  balance_data.py  dataset.py  model.py  statistics.py  test_segmentation.py  train_segmentation.py
Src/App/Python/lib/connectivity/: net_connectivity.cpp  setup.py
Src/App/Python/lib/similarity/: net_similarity.cpp  setup.py
Src/Assets/: assets.qrc
Src/Include/: Algorithms.hpp  DEF.hpp  Geometry.hpp  GlobalUtils.hpp  Graph.hpp  Guide.hpp  Ini.hpp  LEF.hpp  Logger.hpp  Macro.hpp  MainWindow.hpp  Matrix.hpp  Numpy.hpp  PDK.hpp  Pin.hpp  Process.hpp  ProjectSettingsWidget.hpp  RGB.hpp  StagesWidget.hpp  Types.hpp  Utils.hpp  ViewerWidget.hpp
Src/Include/DEF/: AccessPointGrid.hpp  DEF.hpp  GCell.hpp  Net.hpp  Pin.hpp  Stack.hpp  Utils.hpp
Src/Include/GUI/: CreateProject.hpp  ExamineScene.hpp  Information.hpp  MainScene.hpp  MainWindow.hpp  ProjectSettings.hpp
Test/: CMakeLists.txt  geometry.test.cpp  ini.test.cpp  logger.test.cpp  matrix.test.cpp  rgb.test.cpp  utils.test.cpp
include/: DrawWidget.hpp
lib/: CMakeLists.txt
lib/reader/: CMakeLists.txt
lib/reader/include/: def.hpp  lef.hpp  reader.hpp
lib/reader/src/: reader.cpp
src/: DrawWidget.cpp  config.cpp  config.hpp  data.cpp  data.hpp  def.cpp  def.hpp  geometry.cpp  geometry.hpp  macro.hpp  thread_pool.cpp  thread_pool.hpp  torch_include.hpp  types.hpp
src/def_encoder/: def_encoder.cpp  def_encoder.hpp
src/encoder/: encoder.cpp  encoder.hpp  thread_pool.hpp
src/neural_network/: dataset.cpp  dataset.hpp  encoders.hpp  model.hpp  train.cpp  train.hpp  train_module.hpp
src/neural_network/encoders/: efficientnetb3.hpp  resnet50.hpp
src/neural_network/train/: agent.cpp  agent.hpp  enironment.cpp  evironment.hpp  frame.hpp  replay_buffer.cpp  replay_buffer.hpp  train.cpp  train.hpp
src/pdk/: convertor.cpp  convertor.hpp  pdk.hpp
src/viewer/: ControlPanelWidget.cpp  ControlPanelWidget.hpp  DEFViewerWidget.cpp  DEFViewerWidget.hpp  MainWindow.cpp  MainWindow.hpp  ViewerWidget.cpp  ViewerWidget.hpp
